# tree-sitter-multibase

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-multibase.pc.in
bindings/c/tree_sitter/: tree-sitter-multibase.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_multibase/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMultiBaseTests/: TreeSitterMultiBaseTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: test.mb
test/corpus/: comments.txt  database.txt  define.txt  function.txt  pause.txt
