[package]
name = "tree-sitter-multibase"
description = "Parser for the base100 language MultiBase"
version = "0.1.0"
authors = ["Jose Luis Tresserras Merino <joseluistresserras@antex.net>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "multibase"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/thejltres/tree-sitter-multibase"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
